# backend/api/gen/go/app/service/v1/i_ledger_auth_http.pb.go
@@ -1,0 +1,211 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             (unknown)
+// source: app/service/v1/i_ledger_auth.proto
+
+package servicev1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationLedgerAuthServiceInitState = "/app.service.v1.LedgerAuthService/InitState"
+const OperationLedgerAuthServiceRegister = "/app.service.v1.LedgerAuthService/Register"
+const OperationLedgerAuthServiceSetDefaultBook = "/app.service.v1.LedgerAuthService/SetDefaultBook"
+const OperationLedgerAuthServiceSetDefaultTenant = "/app.service.v1.LedgerAuthService/SetDefaultTenant"
+
+type LedgerAuthServiceHTTPServer interface {
+	// InitState 初始化状态（返回用户/租户/账本聚合信息）
+	InitState(context.Context, *emptypb.Empty) (*InitStateResponse, error)
+	// Register 用户注册（自动创建默认租户和账本）
+	Register(context.Context, *LedgerRegisterRequest) (*LedgerAuthResponse, error)
+	// SetDefaultBook 设置默认账本
+	SetDefaultBook(context.Context, *SetDefaultBookRequest) (*emptypb.Empty, error)
+	// SetDefaultTenant 设置默认租户
+	SetDefaultTenant(context.Context, *SetDefaultTenantRequest) (*emptypb.Empty, error)
+}
+
+func RegisterLedgerAuthServiceHTTPServer(s *http.Server, srv LedgerAuthServiceHTTPServer) {
+	r := s.Route("/")
+	r.POST("/app/v1/auth/register", _LedgerAuthService_Register0_HTTP_Handler(srv))
+	r.GET("/app/v1/auth/init-state", _LedgerAuthService_InitState0_HTTP_Handler(srv))
+	r.PATCH("/app/v1/auth/set-default-book/{book_id}", _LedgerAuthService_SetDefaultBook0_HTTP_Handler(srv))
+	r.PATCH("/app/v1/auth/set-default-tenant/{tenant_id}", _LedgerAuthService_SetDefaultTenant0_HTTP_Handler(srv))
+}
+
+func _LedgerAuthService_Register0_HTTP_Handler(srv LedgerAuthServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LedgerRegisterRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationLedgerAuthServiceRegister)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Register(ctx, req.(*LedgerRegisterRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*LedgerAuthResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _LedgerAuthService_InitState0_HTTP_Handler(srv LedgerAuthServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in emptypb.Empty
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationLedgerAuthServiceInitState)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.InitState(ctx, req.(*emptypb.Empty))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*InitStateResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _LedgerAuthService_SetDefaultBook0_HTTP_Handler(srv LedgerAuthServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in SetDefaultBookRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationLedgerAuthServiceSetDefaultBook)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.SetDefaultBook(ctx, req.(*SetDefaultBookRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*emptypb.Empty)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _LedgerAuthService_SetDefaultTenant0_HTTP_Handler(srv LedgerAuthServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in SetDefaultTenantRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationLedgerAuthServiceSetDefaultTenant)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.SetDefaultTenant(ctx, req.(*SetDefaultTenantRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*emptypb.Empty)
+		return ctx.Result(200, reply)
+	}
+}
+
+type LedgerAuthServiceHTTPClient interface {
+	// InitState 初始化状态（返回用户/租户/账本聚合信息）
+	InitState(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *InitStateResponse, err error)
+	// Register 用户注册（自动创建默认租户和账本）
+	Register(ctx context.Context, req *LedgerRegisterRequest, opts ...http.CallOption) (rsp *LedgerAuthResponse, err error)
+	// SetDefaultBook 设置默认账本
+	SetDefaultBook(ctx context.Context, req *SetDefaultBookRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
+	// SetDefaultTenant 设置默认租户
+	SetDefaultTenant(ctx context.Context, req *SetDefaultTenantRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
+}
+
+type LedgerAuthServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewLedgerAuthServiceHTTPClient(client *http.Client) LedgerAuthServiceHTTPClient {
+	return &LedgerAuthServiceHTTPClientImpl{client}
+}
+
+// InitState 初始化状态（返回用户/租户/账本聚合信息）
+func (c *LedgerAuthServiceHTTPClientImpl) InitState(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*InitStateResponse, error) {
+	var out InitStateResponse
+	pattern := "/app/v1/auth/init-state"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationLedgerAuthServiceInitState))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// Register 用户注册（自动创建默认租户和账本）
+func (c *LedgerAuthServiceHTTPClientImpl) Register(ctx context.Context, in *LedgerRegisterRequest, opts ...http.CallOption) (*LedgerAuthResponse, error) {
+	var out LedgerAuthResponse
+	pattern := "/app/v1/auth/register"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationLedgerAuthServiceRegister))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// SetDefaultBook 设置默认账本
+func (c *LedgerAuthServiceHTTPClientImpl) SetDefaultBook(ctx context.Context, in *SetDefaultBookRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
+	pattern := "/app/v1/auth/set-default-book/{book_id}"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationLedgerAuthServiceSetDefaultBook))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "PATCH", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// SetDefaultTenant 设置默认租户
+func (c *LedgerAuthServiceHTTPClientImpl) SetDefaultTenant(ctx context.Context, in *SetDefaultTenantRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
+	pattern := "/app/v1/auth/set-default-tenant/{tenant_id}"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationLedgerAuthServiceSetDefaultTenant))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "PATCH", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
